[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unicache"
dynamic = ["version"]
description = "Cache any function, anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cache"]
authors = [
  { name = "Ikram Khan", email = "ikramkhanfahim@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Grimmscorpp/unicache"
Documentation = "https://github.com/Grimmscorpp/unicache?tab=readme-ov-file#documentation"
Issues = "https://github.com/Grimmscorpp/unicache/issues"
Source = "https://github.com/Grimmscorpp/unicache"

[tool.hatch.version]
path = "src/unicache/__about__.py"
